--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
 
         <div class="section-title">
           <h2>Portfolio</h2>
-          <p> ** Working on this section, should be updated by 11th Oct 2020 ** </p>
+          <p> ** Working on this section, should be updated shortly ** </p>
        </div>
 
         <div class="row">
